--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ai-sdk/google": "^2.0.6",
     "@ai-sdk/openai": "^2.0.8",
     "@ai-sdk/react": "^2.0.0-beta.33",
-    "@hookform/resolvers": "^5.2.0",
+    "@hookform/resolvers": "^5.2.1",
     "@nanostores/react": "ai/react",
     "@polar-sh/better-auth": "^1.1.0",
     "@polar-sh/sdk": "^0.34.11",
@@ -22,13 +22,15 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-direction": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.84.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.0-beta.33",
@@ -37,14 +39,15 @@
     "clsx": "^2.1.1",
     "framer-motion": "11",
     "harden-react-markdown": "^1.0.2",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.540.0",
     "marked": "^16.1.1",
     "motion": "^12.23.12",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.61.1",
+    "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.4",
     "react-syntax-highlighter": "^15.6.1",
@@ -54,10 +57,10 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remeda": "2",
-    "sonner": "^2.0.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.0.14",
+    "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
