--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^1.0.11",
     "@ai-sdk/google": "^2.0.6",
     "@ai-sdk/openai": "^2.0.8",
-    "@ai-sdk/react": "^2.0.0-beta.33",
+    "@ai-sdk/react": "^2.0.22",
     "@hookform/resolvers": "^5.2.1",
     "@nanostores/react": "ai/react",
     "@polar-sh/better-auth": "^1.1.0",
@@ -20,26 +21,31 @@
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-direction": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.84.1",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^5.0.0-beta.33",
+    "ai": "^5.0.22",
     "better-auth": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "11",
     "harden-react-markdown": "^1.0.2",
-    "lucide-react": "^0.540.0",
+    "lucide-react": "^0.541.0",
     "marked": "^16.1.1",
     "motion": "^12.23.12",
     "next": "15.4.4",
@@ -50,7 +56,7 @@
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.4",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.3",
     "react-use-measure": "^2.1.7",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
@@ -58,7 +64,9 @@
     "remark-math": "^6.0.0",
     "remeda": "2",
     "sonner": "^2.0.7",
+    "streamdown": "^1.0.12",
     "tailwind-merge": "^3.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
