--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remeda": "2",
+    "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "streamdown": "^1.0.12",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
-    "zod": "^4.0.17",
+    "zod": "^4.1.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
