--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@ai-sdk/google": "^2.0.6",
     "@ai-sdk/openai": "^2.0.8",
     "@ai-sdk/react": "^2.0.22",
+    "@fumadocs/mdx-remote": "^1.4.2",
     "@hookform/resolvers": "^5.2.1",
+    "@mdx-js/react": "^3.1.1",
     "@nanostores/react": "ai/react",
     "@polar-sh/better-auth": "^1.1.0",
     "@polar-sh/sdk": "^0.34.11",
@@ -36,6 +38,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.84.1",
+    "@types/mdx": "^2.0.13",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.22",
     "better-auth": "^1.3.6",
@@ -44,6 +47,8 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "11",
+    "fumadocs-mdx": "^12.0.3",
+    "fumadocs-ui": "^15.8.5",
     "harden-react-markdown": "^1.0.2",
     "lucide-react": "^0.541.0",
     "marked": "^16.1.1",
@@ -65,7 +70,7 @@
     "remeda": "2",
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
-    "streamdown": "^1.0.12",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
