--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/google": "^2.0.6",
     "@ai-sdk/openai": "^2.0.8",
     "@ai-sdk/react": "^2.0.22",
+    "@base-ui-components/react": "^1.0.0-beta.4",
     "@fumadocs/mdx-remote": "^1.4.2",
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/react": "^3.1.1",
@@ -40,7 +41,7 @@
     "@tanstack/react-query": "^5.84.1",
     "@types/mdx": "^2.0.13",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^5.0.22",
+    "ai": "^5.0.68",
     "better-auth": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,9 +51,10 @@
     "fumadocs-mdx": "^12.0.3",
     "fumadocs-ui": "^15.8.5",
     "harden-react-markdown": "^1.0.2",
-    "lucide-react": "^0.541.0",
+    "lucide-react": "^0.545.0",
     "marked": "^16.1.1",
     "motion": "^12.23.12",
+    "nanoid": "^5.1.6",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
