adde command prisma generate in postinstall

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ai-tutor",
   "version": "0.1.0",
   "private": true,
-  "postInstall": "prisma generate",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@ai-sdk/gateway": "^1.0.11",
