--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nanoid": "^5.1.6",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.2",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
